# agent-coding-template

./: .env.example  README.md  pyproject.toml  pytest.ini
notebooks/: experiments.ipynb  test-dev-env.ipynb
src/agent_coding_template/: __init__.py
src/agent_coding_template/prompts/: coding_agent_system_prompt.j2
src/agent_coding_template/templates/: nvidia_eval_adaptor_bootstrap_template.j2  nvidia_eval_adaptor_instruction.md
src/agent_coding_template/tools/: __init__.py  create_directory.py  directory_mapper.py  file_copy.py  file_editor.py  file_reader.py  file_rename.py  readme_reader.py  write_file.py
src/agent_coding_template/utils/: pretty_print.py
test/: test_directory_mapper.py  test_file_reader.py  test_readme_reader.py  test_sample.py  test_write_file.py
tests/: __init__.py  test_create_directory.py  test_directory_mapper.py  test_file_copy.py  test_file_editor.py  test_file_rename.py  test_pretty_print.py
use-case-tests/nvidia-eval-adaptors/: 1_add_dependencies.j2  2_create_submodule_and_copy_entrypoint.j2  3_convert_entrypoint_to_standard_interface.j2  99_adaptor_bootstrap.j2
